--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Abel&display=swap');
 
 html {
-  box-sizing: content-box;
   width: 100%;
   font-family: "Abel", sans-serif;
   font-size: 18px;
@@ -21,19 +20,53 @@ html {
 body {
   color: var(--onyx-color);
   background-color: var(--platinum-color);
+  margin: 0;
 }
 
 .wrapper {
+  box-sizing: content-box;
   width: 1000px;
   margin: 0 auto;
+  background-color: var(--silver-color);
 }
 
 .header-container {
+  box-sizing: content-box;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
-  background-color: var(--silver-color);
+}
+
+.divider {
+  width: 850px;
+  background-color: var(--teal-blue-color);
+  border: 3px solid rgba(91, 126, 141, 0.8);
+  border-radius: 10px;
+}
+
+.divider::before {
+  content: "";
+  width: 3px;
+  height: 3px;
+  background-color: var(--teal-blue-color);
+  border: 2px solid rgba(91, 126, 141, 0.8);
+  border-radius: 60%;
+  position: absolute;
+  margin-left: -30px;
+  margin-top: -3px;
+}
+
+.divider::after {
+  content: "";
+  width: 3px;
+  height: 3px;
+  background-color: var(--teal-blue-color);
+  border: 2px solid rgba(91, 126, 141, 0.8);
+  border-radius: 60%;
+  position: absolute;
+  margin-left: 875px;
+  margin-top: -3px;
 }
 
 .header {
@@ -47,8 +80,16 @@ body {
   margin: 30px 26px;
 }
 
-.header-menu::marker {
+
+ul::marker,
+li::marker,
+ol::marker { 
   color: var(--teal-blue-color);
+}
+
+ol,
+ul {
+  list-style-type: disc;
 }
 
 ul .header-menu {
@@ -80,7 +121,7 @@ h2 {
 .header-image img {
   width: 290px;
   height: 290px;
-  border: 5px solid rgb(91, 126, 141, 0.8);
+  border: 5px solid rgba(91, 126, 141, 0.8);
   border-radius: 60%;
   margin: 30px 25px;
 }
@@ -88,7 +129,7 @@ h2 {
 .header-image::before {
   content: "";
   display: block;
-  background-color: rgb(91, 126, 141, 0.8);
+  background-color: rgba(91, 126, 141, 0.8);
   position: absolute;
   top: -80px;
   width: 150px;
@@ -98,12 +139,19 @@ h2 {
 }
 
 .main-container {
+  box-sizing: content-box;
   display: flex;
   float: left;
   justify-content: center;
   align-items: center;
   width: 50%;
-  background-color: var(--silver-color);
+}
+
+.main-info {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  margin: 30px 26px;
 }
 
 .aside-container {
@@ -112,13 +160,40 @@ h2 {
   justify-content: center;
   align-items: center;
   width: 50%;
-  background-color: var(--silver-color);
 }
 
-.footer-container {
+.aside-info {
   display: flex;
-  justify-content: center;
+  float: right;
+  flex-direction: column;
+  flex-wrap: wrap;
+  margin: 30px 26px;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-evenly;
   align-items: center;
   width: 100%;
-  background-color: var(--silver-color);
+}
+
+.code-example {
+  font-size: 14px;
+  margin: 150px 0;
+  color: var(--platinum-color);
+  background-color: var(--charcoal-color);
+  padding: 0 6px;
+}
+
+strong,
+i {
+  color: var(--charcoal-color);
+}
+
+a:visited,
+a:active,
+a:link,
+a:hover {
+  color: var(--charcoal-color);
+  text-decoration: none;
 }
